--- a/school-application/pom.xml
+++ b/school-application/pom.xml
@@ -7,10 +7,11 @@
 	<parent>
 		<groupId>com.clean.code</groupId>
 		<artifactId>school-master</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1-SNAPSHOT</version>		
 	</parent>
 	
 	<artifactId>school-application</artifactId>
+	<packaging>jar</packaging>
 	<name>school-application</name>
 	
 	<properties>
@@ -31,9 +32,9 @@
 		
 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-api</artifactId>
-		    <version>5.6.0</version>
-		    <scope>test</scope>
+		    <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
 		</dependency>
 		
 		<dependency>
@@ -43,13 +44,16 @@
 		    <scope>test</scope>
 		</dependency>
 		
-		<dependency>
-		    <groupId>org.assertj</groupId>
-		    <artifactId>assertj-core</artifactId>
-		    <version>3.8.0</version>
-		    <scope>test</scope>
-		</dependency>
-		
 	</dependencies>
+	
+	<build>		
+		<plugins>			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>			
+		</plugins>
+	</build>       
 	
 </project>
