--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,12 @@
 language: java
-script: mvn test -B
+
+jdk:
+  - openjdk11
+
+script:
+ - mvn clean package
+ - mvn test -B
+ - mvn cobertura:cobertura
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
