--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: java
 
 jdk:
   - openjdk11
-  
-script:
- - mvn clean package
- #- mvn cobertura:cobertura
+
+script: "mvn cobertura:cobertura"
  
 after_success:
   - bash <(curl -s https://codecov.io/bash)
