--- a/school-mysql-persistence/pom.xml
+++ b/school-mysql-persistence/pom.xml
@@ -20,6 +20,21 @@
   		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	
+	<dependencyManagement>
+		<dependencies>
+			
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-parent</artifactId>
+				<version>2.2.4.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+				<!-- <relativePath /> -->
+			</dependency>
+			
+		</dependencies>
+	</dependencyManagement>
+	
 	<dependencies>
 	
 		<dependency>
