--- a/school-mysql-persistence/src/main/resources/application.yml
+++ b/school-mysql-persistence/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: root
+    url: jdbc:mysql://localhost:3306/db-school
+    username: school
+    password: password
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
