--- a/school-mysql-persistence/pom.xml
+++ b/school-mysql-persistence/pom.xml
@@ -20,6 +20,7 @@
   		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	
+	<!-- 
 	<dependencyManagement>
 		<dependencies>
 			
@@ -29,11 +30,11 @@
 				<version>2.2.4.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
-				<!-- <relativePath /> -->
 			</dependency>
 			
 		</dependencies>
 	</dependencyManagement>
+	 -->
 	
 	<dependencies>
 	
@@ -46,6 +47,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.2.4.RELEASE</version>
 		</dependency>
 		
 		<dependency>
