alteração de nomes de classe e configuração docker compose

--- a/school-mysql-persistence/src/main/resources/docker-compose.yml
+++ b/school-mysql-persistence/src/main/resources/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  school-mysql:
+  mysql:
     image: mysql:5.7
     restart: always
     environment:
@@ -13,6 +13,6 @@ services:
     expose:
       - '3306'
     volumes:
-      - mysql-school:/var/lib/mysql
+      - mysql-school:/var/lib/mysql-school
 volumes:
   mysql-school:
