--- a/school-application/pom.xml
+++ b/school-application/pom.xml
@@ -21,4 +21,22 @@
   		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	
+	<dependencies>
+	
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>3.2.4</version>
+		    <scope>test</scope>
+		</dependency>
+		
+	</dependencies>
+	
 </project>
