--- a/school-memory-persistence/pom.xml
+++ b/school-memory-persistence/pom.xml
@@ -28,6 +28,20 @@
 			<artifactId>school-application</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>3.2.4</version>
+		    <scope>test</scope>
+		</dependency>
 	
 	</dependencies>
 	
