--- a/school-mysql-persistence/src/main/resources/application.yml
+++ b/school-mysql-persistence/src/main/resources/application.yml
@@ -1,4 +1,22 @@
 spring:
+  profiles: 
+    active:    - ${AMBIENTE:dev}
+
+---
+spring:
+  profiles: test
+  
+  datasource:    url: jdbc:h2:mem:testdb
+    #url: jdbc:h2:file:/data/demo
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+  jpa:    database-platform: org.hibernate.dialect.H2Dialect
+  h2:    console:      enabled: true ## http://localhost:8080/h2-console        
+---
+spring:
+  profiles: dev
+  
   datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db-school
@@ -8,3 +26,4 @@ spring:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+
